fix(index.scss): sets scrollbar height to 10px to match width

--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,7 @@ code {
 
 ::-webkit-scrollbar {
   width: 10px;
+  height: 10px;
   border: 1px solid #eee;
 }
 
